# src/index.ts
@@ -2,6 +2,7 @@ import express from "express";
 import swaggerUi from "swagger-ui-express";
 import cors from "cors";
 import authRouter from "./authRouter";
+import userRouter from "./userRouter";
 import taskRouter from "./taskRouter";
 import YAML from "yamljs";
 import path from "path";
@@ -9,7 +10,7 @@ import path from "path";
 const app = express();
 const PORT = 2000;
 
-// Correct path to swagger.yaml
+// Swagger
 const swaggerDocument = YAML.load(path.join(__dirname, "../src/docs/swagger.yaml"));
 
 // CORS
@@ -28,10 +29,11 @@ app.use(express.json());
 
 // Routers
 app.use("/auth", authRouter);
+app.use("/users", userRouter);  // <-- separate router for user endpoints
 app.use("/tasks", taskRouter);
 
 // Swagger Docs
-app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use("/", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.listen(PORT, () => {
     console.log(`Server running at http://localhost:${PORT}`);
